--- a/stylua.toml
+++ b/stylua.toml
@@ -2,4 +2,4 @@ indent_type = "Spaces"
 indent_width = 2
 column_width = 120
 collapse_simple_statement = "ConditionalOnly"
-quote_stype = "AutoPreferDouble"
+quote_style = "AutoPreferDouble"
